dark mode improvements + fixed links

--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-white dark:bg-gray-800 text-black dark:text-white;
+}
